--- a/app/views/work_hours/show.html.haml
+++ b/app/views/work_hours/show.html.haml
@@ -10,6 +10,14 @@
   %b Description:
   = @work_hour.description
 
+%p
+  %b User:
+  = @work_hour.user
+
+%p
+  %b Project:
+  = @work_hour.project
+
 = link_to 'Edit', edit_work_hour_path(@work_hour)
 \|
 = link_to 'Back', work_hours_path
