--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -11,7 +11,7 @@
     = f.text_field :name
   .field
     = f.label :description
-    = f.text_field :description
+    = f.text_area :description
   .field
     = f.label :client
     = f.text_field :client
