--- a/app/views/work_hours/_form.html.haml
+++ b/app/views/work_hours/_form.html.haml
@@ -15,5 +15,8 @@
   .field
     = f.label :description
     = f.text_area :description
+  .field
+    = f.label :project
+    = f.collection_select(:project_id, Project.all, :id, :name)
   .actions
     = f.submit 'Save'
