--- a/app/views/work_hours/show.html.haml
+++ b/app/views/work_hours/show.html.haml
@@ -9,6 +9,12 @@
 %p
   %b Description:
   = @work_hour.description
+%p
+  %b User:
+  = link_to "#{@user.name} #{@user.surname}", @user
+%p
+  %b Project:
+  = link_to "#{@project.name}", @project
 
 = link_to 'Edit', edit_work_hour_path(@work_hour)
 \|
