--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,6 +4,7 @@
   %tr
     %th Name
     %th Surname
+    %th Email
     %th
     %th
     %th
@@ -12,10 +13,9 @@
     %tr
       %td= user.name
       %td= user.surname
+      %td= user.email
       %td= link_to 'Show', user
-      %td= link_to 'Edit', edit_user_path(user)
-      %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td= #link_to 'Edit', edit_user_path(user)
+      %td= #link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
-
-= link_to 'New User', new_user_path
