--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,10 +17,12 @@
         or
         \#{link_to "Sign in", new_user_session_path}
     %br
-    %h2
-      = link_to "Hours", work_hours_path
-      |
-      = link_to "Projects", projects_path
-      |
-      = link_to "Users", users_path
-    = yield
+    - if user_signed_in? || params[:controller] == 'devise/registrations' || params[:controller] == 'devise/sessions'
+      - if user_signed_in?
+        %h2
+          = link_to "Hours", work_hours_path
+          |
+          = link_to "Projects", projects_path
+          |
+          = link_to "Users", users_path
+      = yield
