--- a/app/views/work_hours/index.html.haml
+++ b/app/views/work_hours/index.html.haml
@@ -21,8 +21,10 @@
       %td= work_hour.work_date
       %td= work_hour.quantity
       %td= work_hour.description
-      %td= link_to "#{work_hour.user.name} #{work_hour.user.surname}", work_hour.user
-      %td= link_to "#{work_hour.project.name}", work_hour.project
+      - if work_hour.user
+        %td= link_to "#{work_hour.user.name} #{work_hour.user.surname}", work_hour.user
+      - if work_hour.project
+        %td= link_to "#{work_hour.project.name}", work_hour.project
       %td= #link_to 'Show', work_hour
       %td= #link_to 'Edit', edit_work_hour_path(work_hour)
       %td= #link_to 'Destroy', work_hour, :method => :delete, :data => { :confirm => 'Are you sure?' }
