time with minutes

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -24,12 +24,12 @@
   - @users.each do |user|
     %tr
       %td= link_to "#{user.name} #{user.surname}", user
-      %td= user.worked_hours(@project)
+      %td= format_time(user.worked_hours(@project))
   %tr
     %td
       %strong TOTAL
     %td
-      = @project.worked_hours
+      = format_time(@project.worked_hours)
 %br
 %br
 = link_to 'Edit', edit_project_path(@project)
