--- a/app/views/work_hours/_form.html.haml
+++ b/app/views/work_hours/_form.html.haml
@@ -11,7 +11,7 @@
     = f.date_select :work_date
   .field
     = f.label :hours
-    = f.number_field :quantity, min: 0, max: 12
+    = f.number_field :hours, min: 0, max: 12
     = f.label :minutes
     = f.number_field :minutes, min: 0, max: 59
   .field
